--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@ body {
 	background-color: #000;
 	color: #fff;
 	font-family: sans-serif;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #board {
