--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,14 @@ body {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	touch-action: none;
 }
 
 #board {
 	position: fixed;
 	top: 0;
 	left: 0;
+	touch-action: none;
 }
 
 #description {
